[gd_scene load_steps=8 format=2]

[ext_resource path="res://valhalla test.png" type="Texture" id=1]
[ext_resource path="res://vn_sprite.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "wiggle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ears:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "talk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mouth:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 5, 0, 7, 0, 7, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "blink"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("eye2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eye2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("eye1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 59 )
script = ExtResource( 2 )

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 219, 133 )

[node name="ears" type="Sprite" parent="."]
position = Vector2( 39, -59 )
texture = ExtResource( 1 )
centered = false
vframes = 3
region_enabled = true
region_rect = Rect2( 467, 125, 130, 180 )

[node name="mouth" type="Sprite" parent="."]
position = Vector2( 75, 32 )
texture = ExtResource( 1 )
centered = false
vframes = 4
hframes = 2
region_enabled = true
region_rect = Rect2( 440, 28, 34, 56 )

[node name="eye1" type="Sprite" parent="."]
position = Vector2( 67, 11 )
texture = ExtResource( 1 )
centered = false
hframes = 4
region_enabled = true
region_rect = Rect2( 441, 0, 20, 4 )

[node name="eye2" type="Sprite" parent="."]
position = Vector2( 85, -8 )
texture = ExtResource( 1 )
centered = false
vframes = 2
hframes = 4
frame = 2
region_enabled = true
region_rect = Rect2( 475, 0, 132, 64 )

[node name="BodyAnimation" type="AnimationPlayer" parent="."]

[node name="EarAnimation" type="AnimationPlayer" parent="."]
anims/wiggle = SubResource( 1 )

[node name="MouthAnimation" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/talk = SubResource( 3 )

[node name="Eye1Animation" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 4 )

[node name="Eye2Animation" type="AnimationPlayer" parent="."]
anims/spin = SubResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 59.0
margin_top = 140.0
margin_right = 141.0
margin_bottom = 160.0
text = "Toggle Talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 59.0
margin_top = 167.0
margin_right = 141.0
margin_bottom = 187.0
text = "Blink now!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 55.0
margin_top = 194.0
margin_right = 143.0
margin_bottom = 214.0
text = "Earflap now!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
